Bug 318024 - Brush settings :Detach from toolbar permanently , make resizable (and remove scratchpad)
Summary: Brush settings :Detach from toolbar permanently , make resizable (and remove ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-08 11:02 UTC by Bollebib
Modified: 2013-12-11 13:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bollebib 2013-04-08 11:02:28 UTC
I 'm working on a proposal to redesign the brush settings to make it more accessable,but for now I suggest 3 (conceptually) small changes

-Detach from toolbar should be permanent. Now it reverts to normal attached to toolbar state everytime you leave the settings. 

-The dialog should be resizable in it's detached state. Scrollbars are a necessary evil in this case to win back screen estate for small screens. You need to be able to see the canvas.


-Remove the scratchpad in detached mode. The great benefit of detached mode is being able to work on the canvas directly which is to my opinion the prefered way to work. You can test the brushes directly,and you can undo/redo/pan/rotate.....
Especially for detached mode the scratchpad is a huge waste of space.


Personally I think we can think of something better than the scratchpad but I understand why it's there for now.

Reproducible: Always
Comment 1 Bollebib 2013-04-14 12:58:58 UTC
after talking about it it may be preferable to give the OPTION tp disable scratchad

Like the advanced color selector can be customized
Comment 2 valerievk 2013-04-14 13:32:46 UTC
On a somewhat related note: Bollebib is basically seeking to maximize access to brush engine options while minimizing screen space used. After discussing on IRC, we agreed that a Brush Options Docker where you can access most sliders (and show favourites at the top like with the Modes drop-down in the top toolbar) would also be one of the ways to achieve this.

I submitted that as a separate feature request here:
https://bugs.kde.org/show_bug.cgi?id=318340 

Just to be clear: that wish and this one are not mutually exclusive. :-)
Comment 3 Halla Rempt 2013-06-20 13:39:18 UTC
It's also very irritating that on undocking the brush editor, it disappears when Krita loses focus. That's actually a bug....
Comment 4 Sven Langkamp 2013-09-26 20:57:22 UTC
Git commit 24eb8c4cdd01a78e474a1a4c4eb37440225f3bb2 by Sven Langkamp.
Committed on 26/09/2013 at 20:55.
Pushed by langkamp into branch 'master'.

add option to hide preset strip and/or scratchpad

M  +87   -69   krita/ui/forms/wdgpaintopsettings.ui
M  +20   -0    krita/ui/kis_config.cc
M  +6    -0    krita/ui/kis_config.h
M  +24   -0    krita/ui/widgets/kis_paintop_presets_popup.cpp
M  +2    -1    krita/ui/widgets/kis_paintop_presets_popup.h

http://commits.kde.org/calligra/24eb8c4cdd01a78e474a1a4c4eb37440225f3bb2
Comment 5 Halla Rempt 2013-12-11 13:22:04 UTC
Git commit 487d6ef2ebac0b9c092470bae1e1aa4fc3fd54c9 by Boudewijn Rempt.
Committed on 11/12/2013 at 13:20.
Pushed by rempt into branch 'calligra/2.8'.

Remember the detached status of the brush editor

Making the window resizable is not quite feasible, but this
implements most of what was left for bug 318024.

M  +1    -2    krita/ui/kis_paintop_box.cc
M  +21   -4    krita/ui/widgets/kis_paintop_presets_popup.cpp
M  +3    -1    krita/ui/widgets/kis_paintop_presets_popup.h
M  +6    -2    krita/ui/widgets/kis_popup_button.cc

http://commits.kde.org/calligra/487d6ef2ebac0b9c092470bae1e1aa4fc3fd54c9
Comment 6 Halla Rempt 2013-12-11 13:22:05 UTC
Git commit f48b70437fa8ba0c22399a44d638715fae6e9a62 by Boudewijn Rempt.
Committed on 11/12/2013 at 13:20.
Pushed by rempt into branch 'master'.

Remember the detached status of the brush editor

Making the window resizable is not quite feasible, but this
implements most of what was left for bug 318024.

M  +1    -2    krita/ui/kis_paintop_box.cc
M  +21   -4    krita/ui/widgets/kis_paintop_presets_popup.cpp
M  +3    -1    krita/ui/widgets/kis_paintop_presets_popup.h
M  +6    -2    krita/ui/widgets/kis_popup_button.cc

http://commits.kde.org/calligra/f48b70437fa8ba0c22399a44d638715fae6e9a62
Comment 7 Halla Rempt 2013-12-11 13:25:36 UTC
Git commit 696d4379ab99a95d7cd071b98245a52ec98e9973 by Boudewijn Rempt.
Committed on 11/12/2013 at 13:24.
Pushed by rempt into branch 'calligra/2.8'.

Hide the scratchpad when detaching the brush editor.

M  +3    -0    krita/ui/widgets/kis_paintop_presets_popup.cpp

http://commits.kde.org/calligra/696d4379ab99a95d7cd071b98245a52ec98e9973
Comment 8 Halla Rempt 2013-12-11 13:25:45 UTC
Git commit 4c03754cfc8172edcf194c53f494641e4b31895d by Boudewijn Rempt.
Committed on 11/12/2013 at 13:24.
Pushed by rempt into branch 'master'.

Hide the scratchpad when detaching the brush editor.

M  +3    -0    krita/ui/widgets/kis_paintop_presets_popup.cpp

http://commits.kde.org/calligra/4c03754cfc8172edcf194c53f494641e4b31895d