Remember the detached status of the brush editor

BUG:318024

Making the window resizable is not quite feasible, but this
implements most of what was left for bug 318024.